Fix spacing

--- a/packages/manager-components/src/design/Layout/styles.css
+++ b/packages/manager-components/src/design/Layout/styles.css
@@ -35,7 +35,7 @@
 }
 
 .layout {
-  margin: 70px 12px;
+  margin: 70px 16px;
 
   @media (--viewport-s) {
     margin: 70px 7%;
